# rwkv-state-quant

./: .gitattributes  .gitignore  CLAUDE.md  excluded36.txt  how_state_compression_works.md  research_log.md  research_log_h2k16.md  run_eval.sh  score.py
engine/: Cargo.toml
engine/src/: fast.rs  main.rs  model.rs
gpu_train/: build_ext.cmd  config.py  pq_qat_epoch_sweep.cmd  pq_qat_epoch_sweep2.cmd  pq_qat_epoch_sweep3.cmd  pq_qat_hp_sweep.cmd  pq_qat_lr_sweep.cmd  qat_lr_sweep_train.cmd  qat_shift_sweep.cmd  run_gpu_eval_e150pq.cmd  run_gpu_eval_fp32.cmd  run_gpu_eval_q128L.cmd  run_gpu_eval_q144.cmd  run_gpu_eval_q144L.cmd  run_gpu_eval_q192.cmd  run_gpu_eval_q52s.cmd  run_gpu_eval_q56b.cmd  run_gpu_eval_q56k.cmd  run_gpu_eval_q56r.cmd  run_gpu_eval_q56s.cmd  run_gpu_eval_q64a.cmd  run_gpu_eval_q64b.cmd  run_gpu_eval_q64k.cmd  run_gpu_eval_q64r.cmd  run_gpu_eval_q68j.cmd  run_gpu_eval_q72b.cmd  run_gpu_eval_q72c.cmd  run_gpu_eval_q72d.cmd  run_gpu_eval_q72f.cmd  run_gpu_eval_q72j.cmd  run_gpu_eval_q72u.cmd  run_gpu_eval_q72w.cmd  run_gpu_eval_q80.cmd  run_gpu_eval_q80w.cmd  run_gpu_eval_q88L.cmd  run_gpu_eval_q88N.cmd  run_gpu_eval_q96L.cmd  run_m4ep30_chained.cmd  run_m4ep50.cmd  run_m4s3_chained.cmd  (+45 more)
reference/: champ_decay15.safetensors  champ_h2k16.safetensors  pq_cb_shift_q128L.txt  pq_cb_shift_q56k.txt  pq_cb_shift_q64a.txt  pq_cb_shift_q64b.txt  pq_cb_shift_q64r.txt  pq_cb_shift_q72b.txt  pq_cb_shift_q72c.txt  pq_cb_shift_q72u.txt  pq_cb_shift_q88L.txt  pq_cb_shift_q88N.txt  pq_cb_wkv_q56k.txt  pq_cb_wkv_q56r.txt  pq_cb_wkv_q56s.txt  pq_cb_wkv_q64k.txt  (+76 more)
(+640 files in other folders)
